# shppy

./: .gitignore  .pyproject.toml  CMakeLists.txt  _debug.ipynb  _debug.py  meta.yaml  pyproject.toml  requirements.txt
.conda/: environment.yml  meta.yaml
.github/workflows/: build.yml  pip.yml  release.yml  release_conda.yml  wheels.yml
SeePy/: setup.py
SeePy/seepy/structure/: find_cycle.py
shppy/: _C.py  __init__.py  _types.py  utils.py
shppy/_core/: hello.cpp  main.cpp
shppy/atom/: __init__.py  __init__.pyi  basic.py  topo.py
shppy/io/: __init__.py  lammpstraj.py  lammpstraj.pyi
shppy/structure/: ice_filler.py
tests/: test_basic.py
tools/: ext-traj.py  find-ring.py  find_ring.py
